<resources>
    <string name="app_name">iMarket</string>
    <string name="banner">Banner</string>
    <string name="title">Fazer compras com poucos cliques é só com o iMarket!</string>
    <string name="description">E para achar as melhores ofertas, queremos saber onde você está</string>
    <string name="activate_location">Ativar localização</string>
    <string name="later">mais tarde</string>
    <string name="shelf">prateleira</string>
    <string name="logo">logo</string>
    <string name="layout_top" />
    <string name="welcome">Bem-vindo!</string>
    <string name="searching_shops">Procurando mercados perto de você</string>
    <string name="shop_picture">shopPicture</string>
    <string name="available_shops">Estes são os mercados perto de você</string>
    <string name="imarket">iMarket</string>
    <string name="open">Abriu</string>
    <string name="close">fechou</string>
    <string name="search">Busca por produto ou mercado</string>
    <string name="of_week">da semana</string>
    <string name="favorites">Favoritos</string>
    <string name="login">Login</string>
    <string name="facebook_login">login com o Facebook</string>
    <string name="enter">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="new_around_here">Novo por aqui?</string>
    <string name="register">Cadastre-se!</string>
    <string name="confirm">Confirmar</string>
    <string name="input_login">Informe seu login</string>
    <string name="inform_credentials">Informe seu login</string>
    <string name="loading">Carregando. Por favor aguarde...</string>
    <string name="login_error">Houve um problema ao se logar. Tente novamente mais tarde</string>
    <string name="register_error">Houve um problema ao se registrar. Tente novamente mais tarde</string>
    <string name="login_invalid_credentials">E-mail ou senha inválidos</string>
    <string name="my_profile">Meu perfil</string>
    <string name="register_title">Cadastro</string>
    <string name="name">Nome</string>
    <string name="confirm_register">Cadastrar!</string>
    <string name="newsletter">Desejo receber promoções e notícias no meu e-mail</string>
    <string name="terms_and_conditions">Li e aceito os termos de uso e políticas de privacidade</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="invald_inform_all_fields">Informe todos os campos</string>
    <string name="invalid_passwords_not_match">As senhas não são iguais, digite novamente</string>
    <string name="invalid_password_length">A senha deve ter no mínimo 6 caracteres</string>
    <string name="invalid_email">Informe um e-mail válido</string>

    <string-array name="search_query_suggestions">
        <item>Margarina</item>
        <item>Mercado 123</item>
        <item>Arroz</item>
    </string-array>

    <string name="facebook_app_id">181292992317302</string>
    <string name="quit">Sair</string>
    <string name="logging_out">Saindo...</string>
    <string name="is_shop">É um mercado?</string>
    <string name="contact_us">Fale conosco!</string>
    <string name="market_login">Login do mercado</string>
    <string name="login_invalid_type">Login permitido somente para compradores</string>
</resources>