<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context=".LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_banner"/>

        <RelativeLayout
            android:id="@+id/lt_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/lt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/bordered_shape"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="80dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/description" />

                <Button
                    android:id="@+id/bt_activate_location"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/activate_location"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_later"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/later"
                    android:textColor="@color/gray"
                    android:textSize="6pt" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-60dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lt_box"
                android:orientation="vertical"
                android:paddingTop="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/shelf"
                    android:scaleType="fitXY"
                    android:src="@drawable/shelf" />

                <br.com.imarket.imarket.view.AmaticTextView
                    android:id="@+id/tv_imarket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="24pt"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/shelf"
                    android:scaleType="fitXY"
                    android:src="@drawable/shelf" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
