<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingTop="20dp">

        <br.com.imarket.imarket.view.LoginEditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_roundcorner"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black" />

        <br.com.imarket.imarket.view.LoginEditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fields_small_spacing"
            android:background="@drawable/gray_roundcorner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black" />

        <br.com.imarket.imarket.view.LoginEditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fields_small_spacing"
            android:background="@drawable/gray_roundcorner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black" />

        <br.com.imarket.imarket.view.LoginEditText
            android:id="@+id/et_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fields_small_spacing"
            android:background="@drawable/gray_roundcorner"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/cb_newsletter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:color_checked="@color/colorPrimaryDark"
                app:color_unchecked_stroke="@color/corner_gray"
                app:duration="200" />

            <br.com.imarket.imarket.view.IMarketTextView
                android:id="@+id/tv_newsletter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/newsletter"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/cb_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:color_checked="@color/colorPrimaryDark"
                app:color_unchecked_stroke="@color/corner_gray"
                app:duration="200" />

            <br.com.imarket.imarket.view.IMarketTextView
                android:id="@+id/tv_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>

        <br.com.imarket.imarket.view.IMarketButton
            android:id="@+id/bt_confirm_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fields_big_spacing"
            android:background="@drawable/red_roundcorner"
            android:text="@string/confirm_register"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>