<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context=".LocationActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/header_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shelf"
            android:scaleType="fitXY"
            android:src="@drawable/shelf" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="24pt"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shelf"
            android:scaleType="fitXY"
            android:src="@drawable/shelf" />

        <TextView
            android:paddingTop="20dp"
            android:id="@+id/tv_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/searching_shops"
            android:textColor="@color/white"
            android:textSize="16pt"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lt_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>


</LinearLayout>