<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/header_banner"/>

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shelf"
            android:scaleType="fitXY"
            android:src="@drawable/shelf" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="22pt"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shelf"
            android:scaleType="fitXY"
            android:src="@drawable/shelf" />

        <TextView
            android:id="@+id/tv_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/searching_shops"
            android:textColor="@color/white"
            android:textSize="16pt"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lt_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center|center_vertical"
            android:layout_height="match_parent">

        <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_shops"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/shop_card" />

    </RelativeLayout>


</LinearLayout>